# templates

./: README.org  flake.nix  haskell-template.cabal  package.yaml
c++/: CMakeLists.txt  flake.nix
c++/app/: CMakeLists.txt  hello.cpp
c++/package/: CMakeLists.txt
c++/src/: CMakeLists.txt
c++/src/example/: greet.cpp  greet.hpp
c++/test/: CMakeLists.txt  test_greet.cpp
haskell/: flake.nix
src/: Greeting.hs
